website/assets/css/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

h1 {
    margin-bottom: 1em;
}

h2, h3, h4, h5, h6, p, ul {
    margin: 1em 0;
}

li {
    margin-left: 2em;
}

nav {
    padding-left: 20px;
}

nav ul {
    margin: 0.5em 0;
}

nav li {
    list-style-type: none;
    margin: 0.25em 0.5em;
}

nav li ul {
    margin-left: 0.5em;
    border-left: 1px solid rgb(230, 230, 230);
}

nav li > a {
    color: rgb(155, 155, 155);
    text-decoration: none;
}

nav li > a:hover {
    text-decoration: underline;
}

nav li.active > a {
    color: rgb(67, 67, 67);
}

body {
    margin: 100px auto;
    max-width: 960px;
}

@media screen and (min-width: 960px) {
    body {
        display: grid;
        grid-template-columns: auto 240px;
    }

    main {
        grid-row: 1;
        grid-column: 1;
    }

    nav {
        grid-row: 1;
        grid-column: 2;
        position: sticky;
        top: 2rem;
        align-self: start;
    }
}

